cambio nombre a index.html

--- a/faq.html
+++ b/faq.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
     <link rel="stylesheet" href="css/font-awesome.min.css">
 
-    <title>Old Store Mendoza</title>
+    <title>Preguntas Frecuentes</title>
   </head>
 
   <!-- Según las consignas del trabajo final nuestro sitio debe contener los siguientes elementos:
@@ -51,7 +51,7 @@
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav ml-auto mr-5">
                 <li class="nav-item active">
-                    <a class="nav-link" href="modelo1.html">Home <span class="sr-only">(current)</span></a>
+                    <a class="nav-link" href="index.html">Home <span class="sr-only">(current)</span></a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="#">Productos</a>
