agrego catálogo modificado

--- a/contacto.html
+++ b/contacto.html
@@ -56,7 +56,7 @@
         <div class="row justify-content-center mt-5 pt-5">
             <div class="col-md-7">
                 <h1 class="display-4">Contactá con Old Store Mendoza</h1>
-                <hr class="bg-info">  
+                <hr class="bg-warning">  
                 <p class="pb-0 mb-0">Te invitamos a contactarnos, te responderemos a la brevedad.</p>  
                 <p class="text-danger small pt-0 mt-0">*Todos los campos son obligatorios</p>
                 <div class="alert alert-success d-none" id="mensajeExito">Mensaje enviado con éxito</div>
@@ -91,6 +91,6 @@
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
-    <script src="formulario.js"></script>
+    <script src="formContacto.js"></script>
 </body>
 </html>
