--- a/index.html
+++ b/index.html
@@ -35,9 +35,12 @@
             1. LOGO DE NUESTRA WEB (debemos crearlo usando Photoshop o similar) con hipervinculo a #Nosotros (descripcion web)
             2. Boton HOME, que nos regrese siempre a la #Home
             1. FORMULARIO DE LOGIN: que nos lleve a #Login
-            2. FORMULARIO DE REGISTRACION> que nos lleve a #Registro
+            2. FORMULARIO DE REGISTR0: que nos lleve a #Registro
             3. PERFIL DE USUARIO: mail, contraseña, foto, direccion de envío, etc...
-            4. CARRITO DE COMPRAS -->
+            4. CARRITO DE COMPRAS 
+            5. FORMULARIO DE CONTACTO
+            6. FAQ -->
+            
     <div class="container-fluid navbar-dark sticky-top" style="background-color: #B67E49;">
         <nav class="navbar navbar-expand-md navbar-dark container" style="background-color: #B67E49;">
             <a class="navbar-brand" href="#">
@@ -51,10 +54,10 @@
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav ml-auto mr-5">
                 <li class="nav-item active">
-                    <a class="nav-link" href="modelo1.html">Home <span class="sr-only">(current)</span></a>
+                    <a class="nav-link" href="index.html">Home <span class="sr-only">(current)</span></a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#">Productos</a>
+                    <a class="nav-link" href="catalogo.html">Productos</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="#">Servicios</a>
@@ -126,8 +129,9 @@
     <section class="container my-5">
         <!-- NOMBRE DE NUESTRO SITIO: puse uno genérico para ir teniendo en mente la ubicación de los elementos-->
         <h1 class="text-center my-3 display-4">Old Store Mendoza</h1>
+        <h5 class="text-center my-3">Compra - Venta de Antigüedades y Servicios</h5>
         <!-- FIN TITULO -->
-        <p class="lead text-center mb-5 text-dar;">En nuestra tienda podrás descubrir un universo único y diferente de posibilidades. Un amplio catálogo de oportunidades, antigüedades muy especiales te están esperando. Podrás encontrar todo lo que siempre has imaginado. Un sueño hecho realidad para los amantes de los elementos y piezas con personalidad, para los que saben apreciar la esencia de este tipo de objetos.</p>
+        <p class="lead text-center mb-5 text-dar;">En nuestra tienda podrás descubrir un universo único y diferente de posibilidades. Contamos con un amplio catálogo de oportunidades, antigüedades muy especiales te están esperando. Podrás encontrar todo lo que siempre has imaginado. Un sueño hecho realidad para los amantes de los elementos y piezas con personalidad, para los que saben apreciar la esencia de este tipo de objetos.</p>
         <!-- PRODUCTOS SELECCIONADOS -->
         <div class="card-deck">
             <div class="row">
@@ -189,7 +193,8 @@
                             <div class="card-body">
                             <h5 class="card-title">Producto 6</h5>
                             <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestias voluptas architecto id illum! Voluptatem impedit sequi expedita illum, voluptate neque quos! Saepe aliqui</p>
-                            <button class="btn btn-white" style="background-color:#FB6205;">COMPRAR</button>
+                            <button class="btn btn-white" style="background-color:#FB6205;">
+                                COMPRAR</button>
                             </div>
                         </div>
                     </div>
