agrego página de servicios y retoque finales Spring 1

--- a/catalogo.html
+++ b/catalogo.html
@@ -25,14 +25,14 @@
 
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav ml-auto mr-5">
+            <li class="nav-item">
+                <a class="nav-link" href="index.html">Home</a>
+            </li>
             <li class="nav-item active">
-                <a class="nav-link" href="index.html">Home <span class="sr-only">(current)</span></a>
+                <a class="nav-link catalogo" href="catalogo.html">Productos</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="catalogo.html">Productos</a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link" href="#">Servicios</a>
+                <a class="nav-link" href="servicios.html">Servicios</a>
             </li>
             
             <!-- Lista desplegable DENTRO de las lista anterior, que junte lo referente al punto 2, 3, 4: #Login, #Registro y #Perfil-->
@@ -62,13 +62,18 @@
     <div class="row">
       <div class="col-lg-3 pt-5">
         <div class="list-group">
-          <a href="#" class="list-group-item">Electro</a>
-          <a href="#" class="list-group-item">Muebles</a>
-          <a href="#" class="list-group-item">Juegos de Living</a>
-          <a href="#" class="list-group-item">Instrumentos Musicales</a>
-          <a href="#" class="list-group-item">Esculturas</a>
-          <a href="#" class="list-group-item">Pinturas</a>
-          <a href="#" class="list-group-item">Coleccionables</a>
+          <a href="#" class="list-group-item list-group-item-warning">Electro</a>
+          <a href="#" class="list-group-item list-group-item-warning">Muebles</a>
+          <a href="#" class="list-group-item list-group-item-warning">Juegos de Living</a>
+          <a href="#" class="list-group-item list-group-item-warning">Instrumentos Musicales</a>
+          <a href="#" class="list-group-item list-group-item-warning">Esculturas</a>
+          <a href="#" class="list-group-item list-group-item-warning">Pinturas</a>
+          <a href="#" class="list-group-item list-group-item-warning">Coleccionables</a>
+          <a href="#" class="list-group-item list-group-item-warning">Libros Antigüos</a>
+          <a href="#" class="list-group-item list-group-item-warning">Filatelia</a>
+          <a href="#" class="list-group-item list-group-item-warning">Militares</a>
+          <a href="#" class="list-group-item list-group-item-warning">Monedas y Billetes</a>
+          <a href="#" class="list-group-item list-group-item-warning">Otros</a>
         </div>
       </div>
       <!-- /.col-lg-3 -->
@@ -317,7 +322,7 @@
   <div class="row justify-content-between text-center">
       <div class="col-md-4 text-md-left">
           <!--<p class="text-muted">Lorem ipsum dolor sit amet consectetur adipisicing elit. Debitis rem?</p>-->
-          <p><small>&copy; 2019 Old Store Mendoza <span>Designed by <a href="" target="_blank">Grupo 4 DH</a> </span></small></p>
+          <p><small>&copy; 2019 Old Store Mendoza <span>Designed by <a href="nosotros.html" target="_blank">Grupo 4 DH</a> </span></small></p>
       </div>
       <div class="col-md-4 text-md-right">
           <div class="h3">
