--- a/index.html
+++ b/index.html
@@ -54,13 +54,13 @@
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav ml-auto mr-5">
                 <li class="nav-item active">
-                    <a class="nav-link" href="index.html">Home <span class="sr-only">(current)</span></a>
+                    <a class="nav-link" href="index.html">Home</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="catalogo.html">Productos</a>
+                    <a class="nav-link" href="catalogo.html">Productos </a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#">Servicios</a>
+                    <a class="nav-link" href="servicios.html">Servicios</a>
                 </li>
                 
                 <!-- Lista desplegable DENTRO de las lista anterior, que junte lo referente al punto 2, 3, 4: #Login, #Registro y #Perfil-->
@@ -101,9 +101,12 @@
             </div>
             <div class="carousel-item">
             <img class="d-block w-100" src="img/a.png" alt="Second slide">
+            <a href="servicios.html"></a>
             <div class="carousel-caption d-none d-md-block">
                 <h5>Contratar un Servicio</h5>
                 <p>En nuestra tienda podés contratar servicios de restauración y todo lo que necesites para darle vida a tus muebles antiguos, desde trabajos de ebanisteria, carpinteria, pintura y mucho más, con profesionales valorados por la comunidad de "Old Store Mendoza".</p>
+            </div>
+            </a>
             </div>
             </div>
             <div class="carousel-item">
@@ -141,7 +144,9 @@
                         <div class="card-body">
                         <h5 class="card-title">Producto 1</h5>
                         <p class="card-text">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Blanditiis eveniet fuga labore sed nemo veniam totam nihil ratione sequi nisi. Porro illo quasi minima? Laboriosam.</p>
-                        <button class="btn btn-white" style="background-color:#FB6205;">COMPRAR</button>
+                        <p class="lead">
+                            <a class="btn btn-warning text-dark btn-lg" href="catalogo.html" role="button">Comprar</a>
+                        </p>
                         </div>
                     </div>
                 </div>
@@ -151,7 +156,9 @@
                         <div class="card-body">
                         <h5 class="card-title">Producto 2</h5>
                         <p class="card-text">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Possimus dicta assumenda tempore asperiores impedit nesciunt fugiat voluptatum ex saepe ea iste, harum quos iusto rerum!</p>
-                        <button class="btn btn-white" style="background-color:#FB6205;">COMPRAR</button>
+                        <p class="lead">
+                            <a class="btn btn-warning text-dark btn-lg" href="catalogo.html" role="button">Comprar</a>
+                        </p>
                         </div>
                     </div>
                 </div>
@@ -161,7 +168,9 @@
                         <div class="card-body">
                         <h5 class="card-title">Producto 3</h5>
                         <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Provident optio laudantium illum! Exercitationem vitae perspiciatis perferendis excepturi! Quia, perferendis in facilis placeat</p>
-                        <button class="btn btn-white" style="background-color:#FB6205;">COMPRAR</button>
+                        <p class="lead">
+                            <a class="btn btn-warning text-dark btn-lg" href="catalogo.html" role="button">Comprar</a>
+                        </p>
                         </div>
                     </div>
                 </div>
@@ -173,7 +182,9 @@
                             <div class="card-body">
                             <h5 class="card-title">Producto 4</h5>
                             <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolorum sunt laborum asperiores quod ipsa reiciendis error quaerat vitae id facere! Eligendi laborum saepe rem atque.</p>
-                            <button class="btn btn-white" style="background-color:#FB6205;">COMPRAR</button>
+                            <p class="lead">
+                                <a class="btn btn-warning text-dark btn-lg" href="catalogo.html" role="button">Comprar</a>
+                            </p>
                             </div>
                         </div>
                     </div>
@@ -183,7 +194,9 @@
                             <div class="card-body">
                             <h5 class="card-title">Producto 5</h5>
                             <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Sit expedita beatae alias saepe quia molestias, aspernatur similique iusto fugit? Minima incidunt</p>
-                            <button class="btn btn-white" style="background-color:#FB6205;">COMPRAR</button>
+                            <p class="lead">
+                                <a class="btn btn-warning text-dark btn-lg" href="catalogo.html" role="button">Comprar</a>
+                            </p>
                             </div>
                         </div>
                     </div>
@@ -193,9 +206,9 @@
                             <div class="card-body">
                             <h5 class="card-title">Producto 6</h5>
                             <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestias voluptas architecto id illum! Voluptatem impedit sequi expedita illum, voluptate neque quos! Saepe aliqui</p>
-                            <button class="btn btn-white" style="background-color:#FB6205;">
-                                COMPRAR</button>
-                            </div>
+                            <p class="lead">
+                                <a class="btn btn-warning text-dark btn-lg" href="catalogo.html" role="button">Comprar</a>
+                            </p>
                         </div>
                     </div>
                 </div> 
@@ -211,7 +224,7 @@
             <hr class="my-4">
             <p>Recordá que es muy importante para la comunidad las valoraciones que otorgamos a nuestros profesionales</p>
             <p class="lead">
-                <a class="btn btn-warning text-dark btn-lg" href="" role="button">Contratar</a>
+                <a class="btn btn-warning text-dark btn-lg" href="servicios.html" role="button">Contratar</a>
             </p>
         </div>
         
@@ -353,7 +366,7 @@
     <div class="row justify-content-between text-center">
         <div class="col-md-4 text-md-left">
             <!--<p class="text-muted">Lorem ipsum dolor sit amet consectetur adipisicing elit. Debitis rem?</p>-->
-            <p><small>&copy; 2019 Old Store Mendoza <span>Designed by <a href="" target="_blank">Grupo 4 DH</a> </span></small></p>
+            <p><small>&copy; 2019 Old Store Mendoza <span>Designed by <a href="nosotros.html" target="_blank">Grupo 4 DH</a> </span></small></p>
         </div>
         <div class="col-md-4 text-md-right">
             <div class="h3">
