--- a/faq.html
+++ b/faq.html
@@ -51,13 +51,13 @@
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav ml-auto mr-5">
                 <li class="nav-item active">
-                    <a class="nav-link" href="index.html">Home <span class="sr-only">(current)</span></a>
+                    <a class="nav-link" href="index.html">Home</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#">Productos</a>
+                    <a class="nav-link" href="catalogo.html">Productos</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#">Servicios</a>
+                    <a class="nav-link" href="servicios.html">Servicios</a>
                 </li>
                 
                 <!-- Lista desplegable DENTRO de las lista anterior, que junte lo referente al punto 2, 3, 4: #Login, #Registro y #Perfil-->
@@ -250,7 +250,7 @@
     <div class="row justify-content-between text-center">
         <div class="col-md-4 text-md-left">
             <!--<p class="text-muted">Lorem ipsum dolor sit amet consectetur adipisicing elit. Debitis rem?</p>-->
-            <p><small>&copy; 2019 Old Store Mendoza <span>Designed by <a href="" target="_blank">Grupo 4 DH</a> </span></small></p>
+            <p><small>&copy; 2019 Old Store Mendoza <span>Designed by <a href="nosotros.html" target="_blank">Grupo 4 DH</a> </span></small></p>
         </div>
         <div class="col-md-4 text-md-right">
             <div class="h3">
