--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
                     <a class="nav-link" href="catalogo.html">Productos </a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="servicios.html">Servicios</a>
+                    <a class="nav-link" href="servicios.html">Serv.</a>
                 </li>
                 
                 <!-- Lista desplegable DENTRO de las lista anterior, que junte lo referente al punto 2, 3, 4: #Login, #Registro y #Perfil-->
