cambio nav FAQ.

--- a/faq.html
+++ b/faq.html
@@ -97,7 +97,7 @@
                         </div>
                         <div id="collapseOne" class="collapse" aria-labelledby="headingOne" data-parent="#accordion">
                         <div class="card-body">
-                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Impedit vel distinctio aspernatur reiciendis non possimus odio perferendis, ducimus libero totam.
+                            Lorem ipsum dolor sit amet consectetur 
                         </div>
                         </div>
                     </div>
@@ -106,13 +106,13 @@
                         <div class="card-header border-warning rounded-0" id="headingTwo">
                         <h5 class="mb-0">
                             <button class="btn btn-link collapsed text-dark" data-toggle="collapse" data-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
-                            <mark>2. Se aceptan formas de pago como tarjetas de Crédito? Hay cuotas sin interés?</mark>
+                            <mark>1. Es seguro comprar por Old Store Mendoza?</mark>
                             </button>
                         </h5>
                         </div>
                         <div id="collapseTwo" class="collapse" aria-labelledby="headingTwo" data-parent="#accordion">
                         <div class="card-body">
-                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Quia obcaecati deleniti odio id ipsa officiis tempore asperiores aut nemo! Ratione?
+                            Lorem ipsum dolor sit amet consectetur adipisicing elit. 
                         </div>
                         </div>
                     </div>
@@ -121,13 +121,14 @@
                         <div class="card-header border-warning rounded-0" id="headingThree">
                         <h5 class="mb-0">
                             <button class="btn btn-link collapsed text-dark" data-toggle="collapse" data-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
-                            <mark>3. Como puedo verificar la calidad de los servicios ofrecidos?</mark>
+                            <mark>1. Es seguro comprar por Old Store Mendoza?</mark>
                             </button>
                         </h5>
                         </div>
                         <div id="collapseThree" class="collapse" aria-labelledby="headingThree" data-parent="#accordion">
                         <div class="card-body">
-                            Lorem ipsum dolor sit amet consectetur, adipisicing elit. Blanditiis placeat laudantium atque excepturi quo, hic molestiae aut labore dolorum inventore.
+                            Lorem ipsum dolor sit amet consectetur, adipisicing elit. 
+
                         </div>
                         </div>
                     </div>
@@ -136,13 +137,13 @@
                             <div class="card-header border-warning rounded-0" id="headingFour">
                             <h5 class="mb-0">
                                 <button class="btn btn-link collapsed text-dark" data-toggle="collapse" data-target="#collapseFour" aria-expanded="false" aria-controls="collapseFour">
-                                <mark>4. Puedo ofrecer mis propios servicios vinculados a la restauración?</mark>
+                                <mark>1. Es seguro comprar por Old Store Mendoza?</mark>
                                 </button>
                             </h5>
                             </div>
                             <div id="collapseFour" class="collapse" aria-labelledby="headingFour" data-parent="#accordion">
                             <div class="card-body">
-                                Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugiat quia velit, cumque ipsa cupiditate molestias voluptas perspiciatis commodi excepturi! Ipsam.
+                                Lorem ipsum dolor sit amet consectetur adipisicing elit.
                             </div>
                             </div>
                         </div>
@@ -151,13 +152,13 @@
                             <div class="card-header border-warning rounded-0" id="headingFive">
                             <h5 class="mb-0">
                                 <button class="btn btn-link collapsed text-dark" data-toggle="collapse" data-target="#collapseFive" aria-expanded="false" aria-controls="collapseFive">
-                                <mark>5. Cómo puedo saber si el servicio que ofrezco será aceptado por Old Store Mendoza?</mark>
+                                <mark>1. Es seguro comprar por Old Store Mendoza?</mark>
                                 </button>
                             </h5>
                             </div>
                             <div id="collapseFive" class="collapse" aria-labelledby="headingFive" data-parent="#accordion">
                                 <div class="card-body">
-                                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Accusantium rerum laboriosam officia aperiam ab assumenda sed dolor culpa natus ex!
+                                    Lorem ipsum dolor sit amet consectetur adipisicing elit.
                                 </div>
                             </div>
                     </div>
@@ -166,13 +167,13 @@
                             <div class="card-header border-warning rounded-0" id="headingSix">
                                 <h5 class="mb-0">
                                 <button class="btn btn-link collapsed text-dark" data-toggle="collapse" data-target="#collapseSix" aria-expanded="false" aria-controls="collapseSix">
-                                <mark>6. Como es el tema de los envíos al comprar mis antigüedades?</mark>
+                                <mark>1. Es seguro comprar por Old Store Mendoza?</mark>
                                 </button>
                                 </h5>
                             </div>
                         <div id="collapseSix" class="collapse" aria-labelledby="headingSix" data-parent="#accordion">
                             <div class="card-body">
-                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Vitae ullam deserunt fuga at praesentium doloribus distinctio autem officiis earum eveniet.
+                            Lorem ipsum dolor sit amet consectetur adipisicing elit.
                             </div>
                         </div>
                     </div>
@@ -181,13 +182,13 @@
                             <div class="card-header border-warning rounded-0" id="headingSeven">
                                 <h5 class="mb-0">
                                 <button class="btn btn-link collapsed text-dark" data-toggle="collapse" data-target="#collapseSeven" aria-expanded="false" aria-controls="collapseSeven">
-                                <mark>7. Se puede abonar por MercadoPago?</mark>
+                                <mark>1. Es seguro comprar por Old Store Mendoza?</mark>
                                 </button>
                                 </h5>
                             </div>
                         <div id="collapseSeven" class="collapse" aria-labelledby="headingSix" data-parent="#accordion">
                             <div class="card-body">
-                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Hic odit iste vel eveniet doloribus quos architecto minima, laboriosam accusamus dolorum?
+                            Lorem ipsum dolor sit amet consectetur adipisicing elit.
                             </div>
                         </div>
                     </div>
@@ -196,13 +197,13 @@
                             <div class="card-header border-warning rounded-0" id="headingEight">
                                 <h5 class="mb-0">
                                 <button class="btn btn-link collapsed text-dark" data-toggle="collapse" data-target="#collapseEight" aria-expanded="false" aria-controls="collapseEight">
-                                <mark>8. En caso de no quedar conforme con el servicio contratado, que puedo hacer?</mark>
+                                <mark>1. Es seguro comprar por Old Store Mendoza?</mark>
                                 </button>
                                 </h5>
                             </div>
                         <div id="collapseEight" class="collapse" aria-labelledby="headingEight" data-parent="#accordion">
                             <div class="card-body">
-                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Inventore voluptates beatae esse alias sed dolorem, ad voluptatem consequatur eveniet a!
+                            Lorem ipsum dolor sit amet consectetur adipisicing elit.
                             </div>
                         </div>
                     </div>
@@ -211,13 +212,13 @@
                             <div class="card-header border-warning rounded-0" id="headingNine">
                                 <h5 class="mb-0">
                                 <button class="btn btn-link collapsed text-dark" data-toggle="collapse" data-target="#collapseNine" aria-expanded="false" aria-controls="collapseNine">
-                                <mark>9. Es solo para clientes de Mendoza, o puedo comprar desde otra provincia?</mark>
+                                <mark>1. Es seguro comprar por Old Store Mendoza?</mark>
                                 </button>
                                 </h5>
                             </div>
                         <div id="collapseNine" class="collapse" aria-labelledby="headingNine" data-parent="#accordion">
                             <div class="card-body">
-                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Itaque voluptates nostrum perspiciatis eaque deserunt nobis, ut veniam aperiam minus aliquam.
+                            Lorem ipsum dolor sit amet consectetur adipisicing elit.
                             </div>
                         </div>
                     </div>
@@ -226,13 +227,13 @@
                             <div class="card-header border-warning rounded-0" id="headingTen">
                                 <h5 class="mb-0">
                                 <button class="btn btn-link collapsed text-dark" data-toggle="collapse" data-target="#collapseTen" aria-expanded="false" aria-controls="collapseTen">
-                                <mark>10. Quisiera hacer un reclamo con un producto/servicio, con quién me comunico?</mark>
+                                <mark>1. Es seguro comprar por Old Store Mendoza?</mark>
                                 </button>
                                 </h5>
                             </div>
                         <div id="collapseTen" class="collapse" aria-labelledby="headingTen" data-parent="#accordion">
                             <div class="card-body">
-                            Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quod, cum recusandae! Fugit doloribus nemo reiciendis labore veniam praesentium et. Nam!
+                            Lorem ipsum dolor sit, amet consectetur adipisicing elit.
                             </div>
                         </div>
                     </div>
