--- a/faq.html
+++ b/faq.html
@@ -91,13 +91,13 @@
                         <div class="card-header border-warning rounded-0" id="headingOne">
                         <h5 class="mb-0">
                             <button class="btn btn-link text-dark" data-toggle="collapse" data-target="#collapseOne" aria-expanded="false" aria-controls="collapseOne">
-                            <mark>1. Es seguro comprar por Old Store Mendoza?</mark>
+                            <mark>1. Es seguro comprar en OSM?</mark>
                             </button>
                         </h5>
                         </div>
                         <div id="collapseOne" class="collapse" aria-labelledby="headingOne" data-parent="#accordion">
                         <div class="card-body">
-                            Lorem ipsum dolor sit amet consectetur 
+                            Lorem ipsum, dolor sit amet consectetur adipisicing elit. Dolorum repudiandae, perspiciatis recusandae expedita hic ex! Sunt molestiae omnis quas vero recusandae animi iste itaque autem, distinctio suscipit velit amet doloribus.
                         </div>
                         </div>
                     </div>
@@ -106,13 +106,13 @@
                         <div class="card-header border-warning rounded-0" id="headingTwo">
                         <h5 class="mb-0">
                             <button class="btn btn-link collapsed text-dark" data-toggle="collapse" data-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
-                            <mark>1. Es seguro comprar por Old Store Mendoza?</mark>
+                            <mark>1. Es seguro comprar en OSM?</mark>
                             </button>
                         </h5>
                         </div>
                         <div id="collapseTwo" class="collapse" aria-labelledby="headingTwo" data-parent="#accordion">
                         <div class="card-body">
-                            Lorem ipsum dolor sit amet consectetur adipisicing elit. 
+                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Facilis blanditiis ducimus at! Ex, voluptate ea fuga harum qui hic facere pariatur, eos ipsam, sapiente earum aperiam vitae recusandae voluptatibus sequi!
                         </div>
                         </div>
                     </div>
@@ -121,14 +121,13 @@
                         <div class="card-header border-warning rounded-0" id="headingThree">
                         <h5 class="mb-0">
                             <button class="btn btn-link collapsed text-dark" data-toggle="collapse" data-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
-                            <mark>1. Es seguro comprar por Old Store Mendoza?</mark>
+                            <mark>1. Es seguro comprar en OSM?</mark>
                             </button>
                         </h5>
                         </div>
                         <div id="collapseThree" class="collapse" aria-labelledby="headingThree" data-parent="#accordion">
                         <div class="card-body">
-                            Lorem ipsum dolor sit amet consectetur, adipisicing elit. 
-
+                            Lorem ipsum dolor sit amet consectetur, adipisicing elit. Earum ullam laudantium quos inventore architecto sequi, ipsam hic veniam dignissimos odit?
                         </div>
                         </div>
                     </div>
@@ -137,13 +136,13 @@
                             <div class="card-header border-warning rounded-0" id="headingFour">
                             <h5 class="mb-0">
                                 <button class="btn btn-link collapsed text-dark" data-toggle="collapse" data-target="#collapseFour" aria-expanded="false" aria-controls="collapseFour">
-                                <mark>1. Es seguro comprar por Old Store Mendoza?</mark>
+                                <mark>1. Es seguro comprar en OSM?</mark>
                                 </button>
                             </h5>
                             </div>
                             <div id="collapseFour" class="collapse" aria-labelledby="headingFour" data-parent="#accordion">
                             <div class="card-body">
-                                Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                                Lorem ipsum dolor sit amet consectetur, adipisicing elit. Vitae necessitatibus vero obcaecati quisquam ipsa veniam et suscipit corrupti dolorem magnam, aut error voluptates qui voluptatem.
                             </div>
                             </div>
                         </div>
@@ -152,13 +151,13 @@
                             <div class="card-header border-warning rounded-0" id="headingFive">
                             <h5 class="mb-0">
                                 <button class="btn btn-link collapsed text-dark" data-toggle="collapse" data-target="#collapseFive" aria-expanded="false" aria-controls="collapseFive">
-                                <mark>1. Es seguro comprar por Old Store Mendoza?</mark>
+                                <mark>1. Es seguro comprar en OSM?</mark>
                                 </button>
                             </h5>
                             </div>
                             <div id="collapseFive" class="collapse" aria-labelledby="headingFive" data-parent="#accordion">
                                 <div class="card-body">
-                                    Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Cum sit adipisci delectus optio. Molestias quisquam ipsa, ad ratione maxime odit.
                                 </div>
                             </div>
                     </div>
@@ -167,13 +166,13 @@
                             <div class="card-header border-warning rounded-0" id="headingSix">
                                 <h5 class="mb-0">
                                 <button class="btn btn-link collapsed text-dark" data-toggle="collapse" data-target="#collapseSix" aria-expanded="false" aria-controls="collapseSix">
-                                <mark>1. Es seguro comprar por Old Store Mendoza?</mark>
+                                <mark>1. Es seguro comprar en OSM?</mark>
                                 </button>
                                 </h5>
                             </div>
                         <div id="collapseSix" class="collapse" aria-labelledby="headingSix" data-parent="#accordion">
                             <div class="card-body">
-                            Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Delectus, consequatur commodi. Vitae, vero quia neque tenetur minus eos deserunt et!
                             </div>
                         </div>
                     </div>
@@ -182,13 +181,13 @@
                             <div class="card-header border-warning rounded-0" id="headingSeven">
                                 <h5 class="mb-0">
                                 <button class="btn btn-link collapsed text-dark" data-toggle="collapse" data-target="#collapseSeven" aria-expanded="false" aria-controls="collapseSeven">
-                                <mark>1. Es seguro comprar por Old Store Mendoza?</mark>
+                                <mark>1. Es seguro comprar en OSM?</mark>
                                 </button>
                                 </h5>
                             </div>
                         <div id="collapseSeven" class="collapse" aria-labelledby="headingSix" data-parent="#accordion">
                             <div class="card-body">
-                            Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Totam vitae beatae placeat veritatis perspiciatis quidem cum minus excepturi delectus, reiciendis, quasi qui incidunt mollitia unde accusamus. Molestias dolore saepe velit?
                             </div>
                         </div>
                     </div>
@@ -197,13 +196,13 @@
                             <div class="card-header border-warning rounded-0" id="headingEight">
                                 <h5 class="mb-0">
                                 <button class="btn btn-link collapsed text-dark" data-toggle="collapse" data-target="#collapseEight" aria-expanded="false" aria-controls="collapseEight">
-                                <mark>1. Es seguro comprar por Old Store Mendoza?</mark>
+                                <mark>1. Es seguro comprar en OSM?</mark>
                                 </button>
                                 </h5>
                             </div>
                         <div id="collapseEight" class="collapse" aria-labelledby="headingEight" data-parent="#accordion">
                             <div class="card-body">
-                            Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Ad quam nulla temporibus libero cupiditate accusamus doloremque assumenda dolor quo modi.
                             </div>
                         </div>
                     </div>
@@ -212,13 +211,13 @@
                             <div class="card-header border-warning rounded-0" id="headingNine">
                                 <h5 class="mb-0">
                                 <button class="btn btn-link collapsed text-dark" data-toggle="collapse" data-target="#collapseNine" aria-expanded="false" aria-controls="collapseNine">
-                                <mark>1. Es seguro comprar por Old Store Mendoza?</mark>
+                                <mark>1. Es seguro comprar en OSM?</mark>
                                 </button>
                                 </h5>
                             </div>
                         <div id="collapseNine" class="collapse" aria-labelledby="headingNine" data-parent="#accordion">
                             <div class="card-body">
-                            Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                            Lorem ipsum dolor sit, amet consectetur adipisicing elit. Et, ullam laboriosam nesciunt quam aspernatur excepturi voluptas delectus facere magni nobis?
                             </div>
                         </div>
                     </div>
@@ -227,13 +226,13 @@
                             <div class="card-header border-warning rounded-0" id="headingTen">
                                 <h5 class="mb-0">
                                 <button class="btn btn-link collapsed text-dark" data-toggle="collapse" data-target="#collapseTen" aria-expanded="false" aria-controls="collapseTen">
-                                <mark>1. Es seguro comprar por Old Store Mendoza?</mark>
+                                <mark>1. Es seguro comprar en OSM?</mark>
                                 </button>
                                 </h5>
                             </div>
                         <div id="collapseTen" class="collapse" aria-labelledby="headingTen" data-parent="#accordion">
                             <div class="card-body">
-                            Lorem ipsum dolor sit, amet consectetur adipisicing elit.
+                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Quod earum labore amet repudiandae! Voluptatum blanditiis magni sit laboriosam facere iste sint iure quam commodi aliquam quae alias, molestiae temporibus in!
                             </div>
                         </div>
                     </div>
